tests/fixtures/typeck/struct_field_type_mismatch.veyl
struct User {
    name: Str,
}

fn main() {
    let user = User { name: 1 };
}
